# clawback

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  tools.json.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
claude_proxy/: __init__.py  __main__.py  config.py  log.py  render.py  server.py  sse.py  thinking_order.py  tool_filter.py  transforms.py
clawback/: __init__.py  __main__.py  config.py  log.py  render.py  server.py  sse.py  stats.py  thinking_order.py  tool_filter.py  transforms.py
tests/: test_config.py  test_inline_system_messages.py  test_log_redaction.py  test_render.py  test_server.py  test_sse_assembler.py  test_stats.py  test_strip_reminders.py  test_thinking_order.py  test_tool_filter.py  test_transforms_extra.py
