[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clawback"
description = "A fail-open HTTP proxy between Claude Code and the Anthropic API that trims token waste, repairs a client reordering bug, and logs every request."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Harmenszoon" }]
keywords = ["claude", "anthropic", "proxy", "llm", "aiohttp"]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: aiohttp",
    "Topic :: Internet :: Proxy Servers",
]
dynamic = ["version"]
dependencies = [
    "aiohttp>=3.9,<4",
    "certifi>=2023.7.22",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "pytest-asyncio>=0.23,<2", "ruff>=0.14.10,<0.15"]

# NOTE: update the slug below if the GitHub repo isn't `Harmenszoon/clawback`.
[project.urls]
Homepage = "https://github.com/Harmenszoon/clawback"
Source = "https://github.com/Harmenszoon/clawback"
Issues = "https://github.com/Harmenszoon/clawback/issues"
Changelog = "https://github.com/Harmenszoon/clawback/blob/main/CHANGELOG.md"

[project.scripts]
clawback = "clawback.__main__:_run"

[tool.setuptools]
packages = ["clawback"]

[tool.setuptools.dynamic]
version = { attr = "clawback.__version__" }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# A pragmatic-but-meaningful set: pyflakes/pycodestyle errors, import sorting,
# modern-Python upgrades, bugbear, comprehensions, and simplifications.
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests favor readability over some lint niceties.
"tests/*" = ["E501"]

[tool.pytest.ini_options]
# Put the project root on sys.path so `import clawback` works without an
# install step, and keep test collection scoped to tests/.
pythonpath = ["."]
testpaths = ["tests"]
# Async tests (server integration) use pytest-asyncio in auto mode.
asyncio_mode = "auto"
